--- a/example_pipelines/policyfile_cicd.yml
+++ b/example_pipelines/policyfile_cicd.yml
@@ -36,7 +36,7 @@ install:
 integration:
   stage: Test
   script:
-    - echo 'chef exec kitchen test'
+    - chef exec kitchen test
   dependencies:
     - install
   when: on_success
