--- a/example_pipelines/cookbook_policyfile_ci.yml
+++ b/example_pipelines/cookbook_policyfile_ci.yml
@@ -51,7 +51,7 @@ unit:
   script:
     - ls
     - chef install
-    - echo 'chef exec rspec .'
+    - chef exec rspec .
   when: on_success
   allow_failure: false
   dependencies:
@@ -62,7 +62,7 @@ unit:
 integration:
   stage: Test
   script:
-    - echo 'chef exec kitchen test'
+    - chef exec kitchen test
   dependencies:
     - install
   when: on_success
